--- a/frontend/assets/css/main.scss
+++ b/frontend/assets/css/main.scss
@@ -3,29 +3,29 @@
 @tailwind utilities;
 
 @font-face {
-    font-family: "Ubuntu";
-    src: url("../fonts/Ubuntu-Regular.ttf") format("truetype");
+    font-family: "Montserrat";
+    src: url("../fonts/Montserrat-Regular.ttf") format("truetype");
     display: swap;
 }
 
 @font-face {
-    font-family: "Ubuntu-Medium";
-    src: url("../fonts/Ubuntu-Medium.ttf") format("truetype");
+    font-family: "Montserrat-Medium";
+    src: url("../fonts/Montserrat-Medium.ttf") format("truetype");
     display: swap;
 }
 
 @font-face {
-    font-family: "Ubuntu-Light";
-    src: url("../fonts/Ubuntu-Light.ttf") format("truetype");
+    font-family: "Montserrat-Light";
+    src: url("../fonts/Montserrat-Light.ttf") format("truetype");
     display: swap;
 }
 
 @font-face {
-    font-family: "Ubuntu-Bold";
-    src: url("../fonts/Ubuntu-Bold.ttf") format("truetype");
+    font-family: "Montserrat-Bold";
+    src: url("../fonts/Montserrat-Bold.ttf") format("truetype");
     display: swap;
 }
 
 html, body {
-    @apply font-ubuntu;
+    @apply font-montserrat text-[#000075];
 }
